Fixed Code with polarization changes

--- a/QK8 BB84 without Eve.ipynb
+++ b/QK8 BB84 without Eve.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "55caa543",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "afcbc4d0",
    "metadata": {},
    "outputs": [
@@ -60,11 +60,11 @@
      "output_type": "stream",
      "text": [
       "This is the list of Qubits that Alice will send\n",
-      "[1, 1, 0, 1, 0]\n",
+      "[0, 1, 0, 1, 0]\n",
       "\n",
       "Now select Basis of measurement - if you want it to be Rectilinear (R) or Diagonal (D)\n",
       "This is the list of Bases that Alice will use to send her Qubits\n",
-      "['D', 'D', 'R', 'D', 'R']\n"
+      "['R', 'D', 'R', 'D', 'D']\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "4aabe7cf",
    "metadata": {},
    "outputs": [
@@ -117,15 +117,11 @@
      "output_type": "stream",
      "text": [
       "Final circuit:\n",
-      "0: ───X───H───\n",
-      "\n",
       "1: ───X───H───\n",
-      "\n",
-      "2: ───X───────\n",
       "\n",
       "3: ───X───H───\n",
       "\n",
-      "4: ───X───────\n",
+      "4: ───H───────\n",
       "[cirq.LineQubit(0), cirq.LineQubit(1), cirq.LineQubit(2), cirq.LineQubit(3), cirq.LineQubit(4)]\n"
      ]
     }
@@ -138,13 +134,15 @@
     "\n",
     "circuit = cirq.Circuit()\n",
     "\n",
+    "# Bit preparation: set |1> when Alice's bit is 1\n",
     "for i in range(no_of_qubits):\n",
     "    if alice_qubits[i] == 1:\n",
     "        circuit.append(cirq.X(qubits[i]))\n",
     "\n",
+    "# Basis selection: R = no-op, D = H\n",
     "for i in range(no_of_qubits):\n",
     "    if alice_basis[i] == 'R':\n",
-    "        circuit.append(cirq.X(qubits[i]))\n",
+    "        pass\n",
     "    elif alice_basis[i] == 'D':\n",
     "        circuit.append(cirq.H(qubits[i]))\n",
     "\n",
@@ -163,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "57753bbb",
    "metadata": {},
    "outputs": [
@@ -173,7 +171,7 @@
      "text": [
       "Bob's turn to choose measurement basis\n",
       "This is the list of Bases that Bob will use to measure\n",
-      "['D', 'D', 'D', 'R', 'R']\n"
+      "['D', 'D', 'R', 'D', 'R']\n"
      ]
     }
    ],
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "ff93b08d",
    "metadata": {},
    "outputs": [
@@ -213,17 +211,18 @@
      "text": [
       "\n",
       "Bob's basis used:\n",
-      "['D', 'D', 'D', 'R', 'R']\n",
+      "['D', 'D', 'R', 'D', 'R']\n",
       "\n",
       "Bob's measurement results:\n",
-      "[1, 1, 1, 0, 0]\n"
+      "[1, 1, 0, 1, 1]\n"
      ]
     }
    ],
    "source": [
+    "# Bob basis rotation before Z-measurement: R = no-op, D = H\n",
     "for i in range(no_of_qubits):\n",
     "    if bob_basis[i] == 'R':\n",
-    "        circuit.append(cirq.X(qubits[i]))\n",
+    "        pass\n",
     "    elif bob_basis[i] == 'D':\n",
     "        circuit.append(cirq.H(qubits[i]))\n",
     "\n",
@@ -253,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "42535838",
    "metadata": {},
    "outputs": [
@@ -266,10 +265,10 @@
       "Bases not matched: 2\n",
       "\n",
       "Alice's shared key:\n",
-      "[1, 1, 0]\n",
+      "[1, 0, 1]\n",
       "\n",
       "Bob's shared key:\n",
-      "[1, 1, 0]\n"
+      "[1, 0, 1]\n"
      ]
     }
    ],
